--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <div class="header__popup" id="popup"></div>
     <section class="purpose">
         <div class="purpose-wrapper">
-            <div class="purpose-wrapper__title">Заказать кальян на дом в Гродно123</div>
+            <div class="purpose-wrapper__title">Заказать кальян на дом в Гродно</div>
             <div class="purpose-wrapper__text">Аренда кальяна в любое место Гродно. Круглосуточная
                 бесплатная доставка за 40 минут. Сделайте заказ и наслаждайтесь ароматным дымом прямо у себя дома.
                 Теперь не нужно думать где покурить кальян в Гродно. Курите, где сами пожелаете!
